[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weak-coupling-ctqmc"
version = "0.1.0"
description = "Weak coupling CTQMC solver."
authors = [{ name = "Shunsuke Yamamoto", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]


[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "python"}  # ← ここで python/ 以下を見るように設定

[tool.setuptools.packages.find]
where = ["python"]